--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,6 @@ dist
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode,macos
+
+###db schema
+db/schema.sql
