--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "joi": "^17.6.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "typeorm": "^0.3.10"
+    "typeorm": "^0.3.10",
+    "uuid": "^9.0.0"
   }
 }
